# magento-python

./: README.md  pyproject.toml  setup.py
magento/: client.py  exceptions.py
