[tool.poetry]
name = "magento-python"
version = "0.1.1"
description = "API wrapper for Magento written in Python"
authors = ["Miguel Ferrer <ingferrermiguel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "magento"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

